fixing margin on mobile view

--- a/css/app.css
+++ b/css/app.css
@@ -505,8 +505,8 @@ tr {
 }
 
 @media (max-width: 47.999em) {
-  body{
-    width: 100%;
+  html {
+      overflow: hidden;
   }
   .center-add {
     width: 300px;
